@@ -3,6 +3,7 @@
  * Don't add items with less than min_tokens tokens in response to Atom PP calls.
  * Fixed a couple more memory leaks.
  * Set the time stamp of items added to a live cache, when they are added to the live cache.
+ * Added Capistrano deployment of the classifier.
 
 === 1.1.8 (7 April 2008)
 
